--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,20 @@ repositories {
     jcenter()
 }
 
+
+sourceCompatibility = 1.7
+version = 1.0
+jar {
+    manifest {
+        attributes 'TicTacToe': 'TicTacToe',
+        'Implementation-Version': version,
+        'Built-By': System.getProperty('user.name'),
+        'Built-Date': new Date(),
+        'Built-JDK': System.getProperty('java.version'),
+        'Built-Gradle': gradle.gradleVersion
+    }
+}
+
 // In this section you declare the dependencies for your production and test code
 dependencies {
     // The production code uses the SLF4J logging API at compile time
@@ -29,4 +43,15 @@ dependencies {
     // testCompile dependency to testCompile 'org.testng:testng:6.8.1' and add
     // 'test.useTestNG()' to your build script.
     testCompile 'junit:junit:4.11'
+}
+
+jar {
+manifest {
+attributes 'Implementation-Title': 'Gradle GAE plugin',
+'Implementation-Version': version,
+'Built-By': System.getProperty('user.name'),
+'Built-Date': new Date(),
+'Built-JDK': System.getProperty('java.version'),
+'Built-Gradle': gradle.gradleVersion
+}
 }
