Adding selenium tests to Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: java
 jdk:
   - openjdk7
- 
+ script:
+  - ./gradlew check
+  - ./gradlew seleniumXvfb
 
 # http://docs.travis-ci.com/user/build-configuration/
