--- a/build.gradle
+++ b/build.gradle
@@ -114,7 +114,7 @@ task seleniumXvfb(type: Test, dependsOn: installApp) {
 
     doFirst {
         // 'bin/xvfb start'.execute()
-        'sh -e /usr/bin/Xvfb :99 -ac -screen 0 1024x768x8 &'.exectue()
+        'sh -e /usr/bin/Xvfb :99 -ac -screen 0 1024x768x8 &'.execute()
         'build/install/TicTacToe/bin/TicTacToe &'.execute()
        
     }
