--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,11 @@ language: java
 jdk:
   - openjdk7
 
+deploy:
+  provider: heroku
+  api_key: "22ff0d13-fcfd-466c-9751-e75fb7a64c35"
+  app: "ghastly-monster-9605"
+
 script:
   - ./gradlew check
   - ./gradlew seleniumXvfb
