--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,15 @@ language: java
 jdk:
   - openjdk7
 
-addons:
-  firefox: "28.0"
+before_install:
+	addons:
+  		firefox: "28.0"
 
-before_script:
-  deploy:
-    provider: heroku
-    api_key: "22ff0d13-fcfd-466c-9751-e75fb7a64c35"
-    app: "ghastly-monster-9605"
+deploy:
+  provider: heroku
+  api_key: "22ff0d13-fcfd-466c-9751-e75fb7a64c35"
+  app: "ghastly-monster-9605"
+  strategy: git
 
 script:
   - ./gradlew check
