purfa nyja travis scriptu

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,17 @@
 language: java
 jdk:
   - openjdk7
-
 addons:
   firefox: "28.0"
-
 deploy:
   provider: heroku
   api_key: "22ff0d13-fcfd-466c-9751-e75fb7a64c35"
   app: "ghastly-monster-9605"
-  strategy: git
-
-script:
-  - ./gradlew check
+  on:
+    repo: HIGGIES/TicTacToe
+after_script:
+  - ./gradlew
   - ./gradlew seleniumXvfb
+
 
 # http://docs.travis-ci.com/user/build-configuration/
