--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,7 @@ deploy:
   provider: heroku
   api_key: "22ff0d13-fcfd-466c-9751-e75fb7a64c35"
   app: "ghastly-monster-9605"
-  on:
-    repo: HIGGIES/TicTacToe
+  strategy: git 
 after_script:
   - ./gradlew
   - ./gradlew seleniumXvfb
