Eitthver breyting en samt ekki sem a ad hafa ahrif en thau gera thad samt a minni tolvo

--- a/build.gradle
+++ b/build.gradle
@@ -112,13 +112,13 @@ task seleniumXvfb(type: Test, dependsOn: installApp) {
     environment "DISPLAY", ":99"
 
     doFirst {
-        // 'bin/xvfb start'.execute()
-        'sh -e /usr/bin/Xvfb :99 -ac -screen 0 1024x768x8 &'.execute()
+        'sh -e bin/xvfb start'.execute()
+        //'sh -e /usr/bin/Xvfb :99 -ac -screen 0 1024x768x8 &'.execute()
         'build/install/TicTacToe/bin/TicTacToe &'.execute()
        
     }
     
     doLast {
-        'sh -e /usr/bin/Xvfb stop'.execute()
+        'sh -e bin/xvfb stop'.execute()
     }
 }
