travis stilltur á annað app

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ addons:
   firefox: "28.0"
 deploy:
   provider: heroku
-  api_key: "22ff0d13-fcfd-466c-9751-e75fb7a64c35"
-  app: "ghastly-monster-9605"
+  api_key: "c167572d-edbc-4061-9921-fc81b439f28f"
+  app: "tictactoe-assignment"
   strategy: git 
 after_script:
   - ./gradlew
