athuga hvort travis cati report

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,8 @@ deploy:
 after_script:
   - ./gradlew
   - ./gradlew seleniumXvfb
-
-
+after_success:
+  - cat build/reports/jacoco/test/html/index.html
 notifications:
   email:
     recipients:
