Add-a package script sem pakkar console program og place-ar fyrir utan workin..

--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ jar {
     baseName = 'TicTacToe'
     version =  '0.1.0'
     manifest {
-        attributes  'Main-Class': 'is.ru.TicTacToe.GameWeb',
+        attributes  'Main-Class': 'is.ru.TicTacToe.Game',
                     'Built-By': System.getProperty('user.name'),
                     'Built-Date': new Date(),
                     'Built-JDK': System.getProperty('java.version'),
