--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,12 @@ deploy:
 after_script:
   - ./gradlew check
   - ./gradlew seleniumXvfb
-deploy:
-  provider: heroku
-  api_key: "22ff0d13-fcfd-466c-9751-e75fb7a64c35"
-  app: "ghastly-monster-9605"
-  strategy: git
+after_success:
+  deploy:
+    provider: heroku
+    api_key: "22ff0d13-fcfd-466c-9751-e75fb7a64c35"
+    app: "ghastly-monster-9605"
+    strategy: git
 notifications:
   email:
     recipients:
