travis before script

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,12 @@ jdk:
   - openjdk7
 addons:
   firefox: "28.0"
-deploy:
-  provider: heroku
-  api_key: "c167572d-edbc-4061-9921-fc81b439f28f"
-  app: "tictactoe-assignment"
-  strategy: git 
+before_script:
+  deploy:
+    provider: heroku
+    api_key: "c167572d-edbc-4061-9921-fc81b439f28f"
+    app: "tictactoe-assignment"
+    strategy: git 
 script:
   - ./gradlew check
   - ./gradlew seleniumXvfb
