--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,12 @@ jdk:
   - openjdk7
 addons:
   firefox: "28.0"
-before_script:
-  deploy:
-    provider: heroku
-    api_key: "c167572d-edbc-4061-9921-fc81b439f28f"
-    app: "tictactoe-assignment"
-    strategy: git 
-script:
+deploy:
+  provider: heroku
+  api_key: "c167572d-edbc-4061-9921-fc81b439f28f"
+  app: "tictactoe-assignment"
+  strategy: git 
+after_script:
   - ./gradlew check
   - ./gradlew seleniumXvfb
 notifications:
